--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.1",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
   },
