added start script

--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
+    "heroku": "^8.1.9",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
