--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "v18.16.0"
+  },
   "type": "module",
   "scripts": {
     "start": "vite",
